# docs-knowledge

./: LICENSE  pyproject.toml
.cursor/docs_knowledge/: pattern_abstract_factory.mdc  pattern_facade.mdc  pattern_function_decorator.mdc
.cursor/rules/: design-patterns.md  design-patterns.mdc  pattern_abstract_base_classes.mdc  pattern_bridge.mdc  pattern_event_driven.mdc  pattern_factory_method.mdc  pattern_generator.mdc  pattern_metaclass.mdc  pattern_retry.mdc  pattern_singleton.mdc
docs_knowledge/: pattern_adapter.mdc  pattern_builder.mdc  pattern_context_manager.mdc  pattern_decorator.mdc  pattern_dependency_injection.mdc  pattern_observer.mdc  pattern_strategy.mdc
